--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sachinreddy.feature.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_start_collab"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_start_collab"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add_artist"
+        android:orderInCategory="100"
+        android:title="@string/action_add_artist"
         app:showAsAction="never" />
 </menu>
