--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#F5F5F5</color>
     <color name="colorBackground">#252525</color>
+
+    <color name="whitesmoke">#f5f5f5</color>
+    <color name="titleBar">#131313</color>
+    <color name="sectionBar">#2b2b2b</color>
+    <color name="editTextColor">#2b2b2b</color>
 </resources>
