--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#3F51B5</color>
+    <color name="colorPrimary">#131313</color>
+    <color name="colorPrimaryDark">#131313</color>
     <color name="colorAccent">#F5F5F5</color>
-    <color name="colorBackground">#252525</color>
+    <color name="colorBackground">#9E3737</color>
 
     <color name="whitesmoke">#f5f5f5</color>
-    <color name="titleBar">#131313</color>
+    <color name="titleBar">#5C5C5C</color>
     <color name="sectionBar">#2b2b2b</color>
     <color name="editTextColor">#2b2b2b</color>
 </resources>
