--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,9 +35,9 @@
     </fragment>
     <fragment
         android:id="@+id/UserInfoFragment"
-        android:name="com.sachinreddy.feature.fragment.UserInfoFragment"
+        android:name="com.sachinreddy.feature.fragment.LoginFragment"
         android:label="@string/login_fragment_label"
-        tools:layout="@layout/dialog_user_info">
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/HomeFragment"
