--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#131313</color>
     <color name="colorPrimaryDark">#131313</color>
     <color name="colorAccent">#F5F5F5</color>
-    <color name="colorBackground">#9E3737</color>
+    <color name="colorBackground">#000000</color>
 
     <color name="whitesmoke">#f5f5f5</color>
     <color name="titleBar">#5C5C5C</color>
