--- a/app/src/main/res/drawable/round_background_circle.xml
+++ b/app/src/main/res/drawable/round_background_circle.xml
@@ -3,4 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorPrimary" />
     <corners android:radius="100dp" />
+    <size
+        android:width="120dp"
+        android:height="120dp" />
 </shape>
