--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#131313</color>
+    <color name="colorPrimary">#FDED86</color>
     <color name="colorPrimaryDark">#131313</color>
     <color name="colorAccent">#F5F5F5</color>
-    <color name="colorBackground">#000000</color>
+    <color name="colorBackground">#151515</color>
 
     <color name="whitesmoke">#f5f5f5</color>
     <color name="titleBar">#5C5C5C</color>
