Updating navbar colors.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,12 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <!--        <item name="android:background">@color/colorBackground</item>-->
-        <item name="android:background">@color/whitesmoke</item>
+        <item name="android:background">@color/colorBackground</item>
+
+        <item name="android:textColor">@color/whitesmoke</item>
+        <!--        <item name="android:popupMenuStyle"-->
+        <item name="android:popupBackground">@color/whitesmoke</item>
+        <item name="android:itemBackground">@color/whitesmoke</item>
     </style>
 
     <style name="CustomActivityAnimation" parent="@android:style/Animation.Activity">
