--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="250dp"
-    style="@style/Login">
+    android:minWidth="250dp">
 
     <ImageView
         android:id="@+id/backgroundAvatar"
