--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FDED86</color>
+    <color name="colorPrimary">#5C5C5B</color>
     <color name="colorPrimaryDark">#131313</color>
-    <color name="colorAccent">#F5F5F5</color>
-    <color name="colorBackground">#151515</color>
+    <color name="colorAccent">#D87CA3</color>
+    <color name="colorBackground">#FFFFFF</color>
 
     <color name="whitesmoke">#f5f5f5</color>
-    <color name="titleBar">#5C5C5C</color>
     <color name="sectionBar">#2b2b2b</color>
     <color name="editTextColor">#2b2b2b</color>
 </resources>
