--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,39 +1,19 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:background">@color/colorBackground</item>
-
-        <item name="android:textColor">@color/whitesmoke</item>
-        <!--        <item name="android:popupMenuStyle"-->
-        <item name="android:popupBackground">@color/whitesmoke</item>
-        <item name="android:itemBackground">@color/whitesmoke</item>
     </style>
+
+    <!-- ========================== -->
 
     <style name="CustomActivityAnimation" parent="@android:style/Animation.Activity">
         <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
         <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
         <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
         <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <style name="TitleBar">
-        <item name="android:background">@drawable/background_title_bar</item>
-    </style>
-
-    <style name="Login">
-        <item name="android:background">@color/colorBackground</item>
-    </style>
-
-    <style name="ActionBar" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:background">@drawable/background_title_bar</item>
     </style>
 
 </resources>
