Firebase Auth added.

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,8 +13,9 @@
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:tint="@color/whitesmoke"
         android:id="@+id/profilePicture"
-        android:src="@drawable/default_picture"
+        android:src="@drawable/ic_account_circle"
         android:padding="55dp" />
 
     <Button
