ActionBar fixes and animation updates.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,7 @@
             app:destination="@id/RegisterFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
-            app:popUpTo="@id/LoginFragment" />
+            />
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/HomeFragment"
@@ -47,8 +47,7 @@
             android:id="@+id/action_homeFragment_to_profileFragment"
             app:destination="@id/ProfileFragment"
             app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/ProfileFragment" />
+            app:exitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/ProfileFragment"
