--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,172 +7,204 @@
     android:background="@color/colorBackground"
     android:minWidth="250dp">
 
+    <!--  IMAGE  -->
+
     <ImageView
         android:id="@+id/backgroundAvatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#00000000"
         android:padding="30dp"
-        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/round_background_circle" />
+
+        app:srcCompat="@drawable/round_background_circle"
+
+        app:layout_constraintBottom_toBottomOf="@id/forgroundAvatar"
+        app:layout_constraintEnd_toEndOf="@id/forgroundAvatar"
+        app:layout_constraintStart_toStartOf="@id/forgroundAvatar"
+        app:layout_constraintTop_toTopOf="@id/forgroundAvatar" />
 
     <ImageView
         android:id="@+id/forgroundAvatar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#00000000"
         android:padding="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
+
+        app:srcCompat="@drawable/default_picture"
+
+        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/default_picture" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontalGuideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".3" />
+    <!--  INPUT FIELDS  -->
 
     <EditText
         android:id="@+id/artistName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="16dp"
+        android:padding="16dp"
+
         android:ems="10"
         android:hint="@string/artist_name"
         android:inputType="text"
-        android:padding="16dp"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />
 
-    <EditText
-        android:id="@+id/phoneNumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/round_border"
-        android:drawableStart="@drawable/ic_phone"
-        android:drawablePadding="16dp"
-        android:ems="10"
-        android:hint="@string/phone_number"
-        android:inputType="text"
-        android:padding="16dp"
-        android:textColor="@color/colorAccent"
-        android:textColorHint="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline1"
+        app:layout_constraintBottom_toTopOf="@id/inputEmail" />
 
     <EditText
         android:id="@+id/inputEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="16dp"
+        android:padding="16dp"
+
         android:ems="10"
         android:hint="@string/email"
         android:inputType="text"
-        android:padding="16dp"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artistName" />
+        app:layout_constraintTop_toBottomOf="@+id/artistName"
+        app:layout_constraintBottom_toTopOf="@id/phoneNumber" />
+
+    <EditText
+        android:id="@+id/phoneNumber"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_phone"
+        android:drawablePadding="16dp"
+        android:padding="16dp"
+
+        android:ems="10"
+        android:hint="@string/phone_number"
+        android:inputType="text"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
+        app:layout_constraintBottom_toTopOf="@id/inputPassword" />
 
     <EditText
         android:id="@+id/inputPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="16dp"
+        android:padding="16dp"
+
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:padding="16dp"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
+        app:layout_constraintBottom_toTopOf="@id/confirmPassword" />
 
     <EditText
         android:id="@+id/confirmPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="16dp"
+        android:padding="16dp"
+
         android:ems="10"
         android:hint="@string/confirm_password"
         android:inputType="textPassword"
-        android:padding="16dp"
         android:textColor="@color/colorAccent"
         android:textColorHint="@color/colorAccent"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
+        app:layout_constraintBottom_toTopOf="@id/buttonRegister" />
 
     <Button
         android:id="@+id/buttonRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+
         android:background="@drawable/round_background"
         android:text="@string/register"
         android:textColor="@color/colorBackground"
         android:textSize="18sp"
         android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
+        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline2" />
+
+    <!--  OTHER  -->
 
     <TextView
         android:id="@+id/haveAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+
         android:text="@string/already_have_an_account_login"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <!--  GUIDELINES + PROGRESS BAR  -->
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".9" />
 
     <ProgressBar
         android:id="@+id/registerProgressBar"
